# agentcontrol-tray

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml
.claude/agents/: backlog-groomer.md  design-guard.md  doc-writer.md  lint-fixer.md  migration-author.md  release-planner.md  standup-summarizer.md  tdd-implementer.md
.claude/commands/: design-review.md
.github/workflows/: build-release.yml  ci.yml  macos-test.yml
bootstrapper/: README.md  agentcontrol-bootstrapper.nsi  build.sh  fetch.ps1  latest.json.example
docs/: AUDIT-FINDINGS-27-1.md  PHASE-27-0-SPIKE.md  PHASE-27-2-CROSS-REPO.md  PHASE-27-7-AUTOUPDATE.md  PHASE-27-SUMMARY.md  PHASE-28-SUMMARY.md  PHASE-66I-BLUEPRINT.md  UPDATER-FLOW.md
scripts/: .line-limits-grandfather  bundle-bridge.sh  check-design-tokens.mjs  check-line-limits.mjs  check-release-gates.sh  install-linux-deps.sh  validate-updater.mjs
scripts/e2e-pair-verify/: README.md  seed-test-user.sql  verify-pair-flow-signup.mjs  verify-pair-flow-signup.test.mjs  verify-pair-flow-spa.mjs  verify-pair-flow-spa.test.mjs  verify-pair-flow.mjs  verify-pair-flow.test.mjs
scripts/hyperv-test/: AutoUnattend.xml  BLUEPRINT.md  Build-BaseImage-FromIso.ps1  Build-BaseImage.ps1  First-Boot.ps1  Import-DevVM.ps1  README.md  Update-DevVM.ps1  helpers-vm.psm1  hyperv-test-orchestrator.ps1  hyperv-test-orchestrator.sh  runner-vm.ps1
scripts/linux-test/: Dockerfile.bridge  Dockerfile.tray  README.md  bridge-runner.sh  host-orchestrator.sh  tray-runner.sh
scripts/macos-test/: README.md  bridge-runner.sh  helpers.sh  install-mac.sh  tray-runner.sh
scripts/sandbox-test/: README.md  helpers.psm1  host-orchestrator.sh  pair-verify.env.example  sandbox-runner-wsl.ps1  sandbox-runner.ps1  test-wsl.wsb  test.wsb
src/: App.css  App.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge_supervisor.rs  config.rs  docker.rs  lib.rs  main.rs
src-tauri/src/commands/: api_key.rs  bridge.rs  bridge_supervisor.rs  deps.rs  git_cfg.rs  mod.rs  oauth.rs  pair.rs  shell.rs  system.rs  systemd.rs  ubuntu.rs  wsl.rs
src/auth/: AuthContext.tsx  ConfigScreen.tsx  LoginScreen.tsx  deepLinkHandler.ts
src/backlog/: types.ts  useBacklogItems.ts  useBacklogReleases.ts  useProjectsList.ts  useStandupDigest.ts
src/bridge/: BridgeClientContext.tsx  bridgeClient.ts  useBridgeShares.ts  useBridgesList.ts  useOrgsList.ts  usePairingStatus.ts  useRecentTasks.ts  useTeams.ts  useTraySync.ts
src/config/: hetzner.ts
src/lib/: appSettings.ts  changelog.ts  changelogBundled.ts  docker.ts  navigation.ts  notifier.ts  storage.ts  supabase.ts  updater.ts
src/onboarding/: OnboardingFlow.tsx  api.ts  installRunner.ts  onboarding.css  state.ts  useInstallSequence.ts  usePairFlow.ts  useSystemChecks.ts
src/process/: advanceInstance.ts  types.ts  useProcessInstanceDetail.ts  useProjectsWithInstances.ts
src/screens/: AboutCard.tsx  ArtifactViewer.tsx  ArtifactViewerFullscreen.tsx  BacklogConsumptionScreen.tsx  BacklogQuickAddButton.tsx  BridgeListItem.tsx  BridgesListCard.tsx  DigestModal.tsx  (+10 more)
(+18 files in other folders)
