[package]
name = "agentcontrol-tray"
version = "0.7.0"
description = "AgentControl Bridge tray app — desktop UI for daemon pairing, status, and settings"
authors = ["AgentControl"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agentcontrol_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.9"
tauri-plugin-notification = "2.3.3"
tauri-plugin-store = "2.4.3"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
# Phase 55.3.0 — folded-in installer commands (WSL onboarding flow).
url = "2"
rand = "0.8"
hex = "0.4"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.2"
# tauri-plugin-stronghold deferred to Phase 27.7 — needs proper per-OS
# key-derivation (machine-id + per-install salt) not yet implemented.
# 27.1 uses tauri-plugin-store for session persistence (less secure but
# functional). When migrating in 27.7, add: tauri-plugin-stronghold = "2.3.1"

